@@ -170,6 +170,8 @@ static const int allLayers[MAX_LAYERS] =
 static char recentNumber[LAST_OPENED_TABLE_COUNT];
 static char recentMenuname[MAX_PATH];
 
+char *VPinball::m_customParameters[MAX_CUSTOM_PARAM_INDEX] = {0};
+
 #define TBCOUNTMAIN (sizeof(g_tbbuttonMain) / sizeof(TBBUTTON))
 #define TBCOUNTPALETTE (sizeof(g_tbbuttonPalette) / sizeof(TBBUTTON))
 #define TBCOUNTLAYERS (sizeof(g_tbbuttonLayers) / sizeof(TBBUTTON))
